force-app/main/default/objects/Consent_Document_Linkage__c/Consent_Document_Linkage__c.object-meta.xml
<CustomObject>
    <label>Consent Document Linkage</label>
    <nameField>
        <label>Consent Document Linkage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consent Document Linkages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>