force-app/main/default/objects/Consent_Document_Linkage__c/fields/Clinic__c.field-meta.xml
<CustomField>
    <fullName>Clinic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinic</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Clinics__c.Id</field>
            <operation>notEqual</operation>
            <value>a055g000003mqzpAAA</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Clinics__c</referenceTo>
    <relationshipLabel>Consent Document Linkages</relationshipLabel>
    <relationshipName>Consent_Document_Linkages</relationshipName>
    <type>Lookup</type>
</CustomField>