force-app/main/default/objects/Consent_Document_Linkage__c/fields/Consent_Requires_Additional_Infomration__c.field-meta.xml
<CustomField>
    <fullName>Consent_Requires_Additional_Infomration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Requires Additional Information</label>
    <type>Checkbox</type>
</CustomField>