force-app/main/default/objects/Consent_Document_Linkage__c/fields/Couple_Consent__c.field-meta.xml
<CustomField>
    <fullName>Couple_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Couple Consent?</label>
    <type>Checkbox</type>
</CustomField>