force-app/main/default/objects/Consent_Document_Linkage__c/fields/ftFormHash__c.field-meta.xml
<CustomField>
    <fullName>ftFormHash__c</fullName>
    <label>ftFormHash</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>