force-app/main/default/objects/Consent_Document_Linkage__c/fields/Household_Related__c.field-meta.xml
<CustomField>
    <fullName>Household_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Household Related?</label>
    <type>Checkbox</type>
</CustomField>