force-app/main/default/objects/Consent_Document_Linkage__c/fields/Patient_Related__c.field-meta.xml
<CustomField>
    <fullName>Patient_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Related</label>
    <type>Checkbox</type>
</CustomField>