force-app/main/default/objects/Consent_Document_Linkage__c/fields/Requires_Councillor__c.field-meta.xml
<CustomField>
    <fullName>Requires_Councillor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Councillor</label>
    <type>Checkbox</type>
</CustomField>