force-app/main/default/objects/Consent_Document_Linkage__c/fields/Requires_Embryo_Oocyte_Sperm_Vial_Count__c.field-meta.xml
<CustomField>
    <fullName>Requires_Embryo_Oocyte_Sperm_Vial_Count__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This boolean applies to FLAB 62, 17.</description>
    <label>Requires Embryo/Oocyte/Sperm Vial Count</label>
    <type>Checkbox</type>
</CustomField>