force-app/main/default/objects/Consent_Document_Linkage__c/fields/Requires_Follicle_Count__c.field-meta.xml
<CustomField>
    <fullName>Requires_Follicle_Count__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please tick this box if applicable to selected consent. Applies to &quot;3.5 - More than 1 Lead Follicles Consent&quot;</description>
    <label>Requires Follicle Count?</label>
    <type>Checkbox</type>
</CustomField>