force-app/main/default/objects/Consent_Document_Linkage__c/fields/Requires_Interpreter__c.field-meta.xml
<CustomField>
    <fullName>Requires_Interpreter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Interpreter?</label>
    <type>Checkbox</type>
</CustomField>