force-app/main/default/objects/Consent_Document_Linkage__c/fields/Treating_Dr_Staff_Signature_Required__c.field-meta.xml
<CustomField>
    <fullName>Treating_Dr_Staff_Signature_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Treating Dr/Staff Signature Required?</label>
    <type>Checkbox</type>
</CustomField>