force-app/main/default/objects/Consent_Document_Linkage__c/listViews/All_Consent_Linkages.listView-meta.xml
<ListView>
    <fullName>All_Consent_Linkages</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Consent Linkages</label>
</ListView>